<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/background_color"
    tools:context=".ui.fragments.login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        android:background="@color/background_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/chat_vector"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_130sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/chat_vector_art"/>

        <TextView
            android:id="@+id/login_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            android:fontFamily="@font/magilio"
            android:text="@string/pedir_login_string"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_20ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chat_vector"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            android:background="@color/background_layout_et_color"
            android:hint="@string/email_string"
            android:textColorHint="@color/hintTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_textview">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/magilio"
                android:textColor="@color/text_color"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_senha"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_layout_et_color"
            android:textColorHint="@color/hintTextColor"
            android:layout_margin="@dimen/_16sdp"
            android:hint="@string/senha_string"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_senha"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/magilio"
                android:textColor="@color/text_color"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            android:fontFamily="@font/magilio"
            android:backgroundTint="@color/button_background"
            android:textColor="@color/button_text_color"
            android:text="@string/login_string"
            android:textAllCaps="false"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintTop_toBottomOf="@id/input_senha" />

        <TextView
            android:id="@+id/usuario_sem_conta_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_12sdp"
            android:fontFamily="@font/magilio"
            android:gravity="center"
            android:padding="@dimen/_8sdp"
            android:text="@string/nao_tenho_conta_string"
            android:textColor="@color/text_color"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_button"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="48dp"
        android:contentDescription="textview pra quem nao tem conta" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>