<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ui.fragments.register.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/background_color"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:fontFamily="@font/magilio"
            android:text="@string/cadastre_se_chat_string"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_20ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/crc_img_user"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:src="@drawable/usuario_sem_perfil"
            app:civ_border_color="@color/civ_border_color"
            app:civ_border_width="@dimen/_2sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_register" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:background="@color/background_layout_et_color"
            android:hint="@string/nome_usuario_string"
            android:textColorHint="@color/hintTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/crc_img_user">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/magilio"
                android:inputType="text"
                android:textColor="@color/text_color" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:background="@color/background_layout_et_color"
            android:hint="@string/email_string"
            android:textColorHint="@color/hintTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/magilio"
                android:inputType="textEmailAddress"
                android:textColor="@color/text_color" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_senha"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:background="@color/background_layout_et_color"
            android:hint="@string/senha_string"
            android:textColorHint="@color/hintTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_senha"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/magilio"
                android:inputType="textPassword"
                android:textColor="@color/text_color" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_verify_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:background="@color/background_layout_et_color"
            android:hint="@string/repetir_senha_string"
            android:textColorHint="@color/hintTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_senha">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_verify_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/magilio"
                android:inputType="textPassword"
                android:textColor="@color/text_color" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            android:backgroundTint="@color/button_background"
            android:fontFamily="@font/magilio"
            android:text="@string/registro_string"
            android:textAllCaps="false"
            android:textColor="@color/button_text_color"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_verify_password" />

        <TextView
            android:id="@+id/tv_user_have_already_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_12sdp"
            android:clickable="true"
            android:contentDescription="text view para abrir conta"
            android:focusable="true"
            android:fontFamily="@font/magilio"
            android:gravity="center"
            android:minHeight="48dp"
            android:padding="@dimen/_8sdp"
            android:text="@string/ja_tenho_conta_string"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_register" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>