<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.profile.ProfileFragment">

    <ImageButton
    android:id="@+id/botao_voltar_imagebuttom"
    android:layout_width="48dp"
    android:layout_height="48dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:src="@drawable/back_icon"
    android:background="@android:color/transparent"
    android:contentDescription="image button"
    android:padding="12dp"
    app:tint="@color/ImageButtonTint"
    android:layout_marginTop="@dimen/_6sdp"
    android:layout_marginStart="@dimen/_12sdp" />


    <TextView
        android:id="@+id/perfil_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/botao_voltar_imagebuttom"
        android:text="@string/perfil"
        android:textStyle="bold"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/text_color"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imagem_usuario_cirimgview"
        android:layout_width="@dimen/_140sdp"
        android:layout_height="@dimen/_140sdp"
        app:layout_constraintTop_toBottomOf="@id/perfil_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_32sdp"
        app:civ_border_width="@dimen/_2sdp"
        app:civ_border_color="@color/civ_border_color"
        android:src="@drawable/usuario_sem_perfil"/>

    <TextView
        android:id="@+id/m_email_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:fontFamily="@font/magilio"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_16ssp"
        android:padding="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imagem_usuario_cirimgview" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_nome_usuaro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_margin="@dimen/_16sdp"
        android:background="@color/background_layout_et_color"
        android:textColorHint="@color/hintTextColor"
        app:layout_constraintTop_toBottomOf="@id/m_email_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/nome_usuario_string">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPersonName"
            android:textColor="@color/text_color"
            android:fontFamily="@font/magilio"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/salvar_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/input_nome_usuaro"
        android:backgroundTint="@color/button_background"
        android:textColor="@color/button_text_color"
        android:layout_margin="@dimen/_32sdp"
        android:padding="@dimen/_8sdp"
        android:text="@string/salvar_perfil_usuario_string"/>

</androidx.constraintlayout.widget.ConstraintLayout>